# libbuffer

./: .gitmodules  CMakeLists.txt  README.md
buffer/: buffer.cc  buffer.h  file.cc  file.h
unittest/: buffer.cc  main.cc
